gcc/testsuite/rust/rustc/ui/vec/vec-macro-with-comma-only.rs
pub fn main() {
    vec![,]; // { dg-error "" "" { target *-*-* } }
}

